# src/app/Http/Controllers/API/Portfolio/TransactionController.php
@@ -3,18 +3,52 @@
 namespace App\Http\Controllers\API\Portfolio;
 
 use App\Actions\StoreTransactionAction;
+use App\Actions\UpdateTransactionAction;
 use App\Http\Controllers\BaseControllers\ServiceController;
 use App\Http\Requests\Portfolio\TransactionRequest;
+use App\Http\Resources\Portfolio\TransactionResource;
+use App\Models\Portfolio;
+use App\Models\Transaction;
 use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Resources\Json\AnonymousResourceCollection;
 
 class TransactionController extends ServiceController
 {
-    public function store(TransactionRequest $transactionRequest, StoreTransactionAction $storeTransactionAction) : JsonResponse
+    public function index(Portfolio $portfolio): AnonymousResourceCollection
+    {
+        return TransactionResource::collection($portfolio->transactions);
+    }
+
+    public function show(Transaction $transaction): TransactionResource
+    {
+        return new TransactionResource($transaction);
+    }
+
+    public function store(TransactionRequest $transactionRequest, StoreTransactionAction $storeTransactionAction): JsonResponse
     {
         $transactionData = $transactionRequest->validated();
 
-        $transaction = $storeTransactionAction->handle($transactionData, $this->coinGeckoService);
+        $responce = $storeTransactionAction->handle($transactionData, $this->coinGeckoService);
 
-        return response()->json($transaction, 201);
+        return $responce;
+    }
+
+    public function update(TransactionRequest $transactionRequest, Transaction $transaction, UpdateTransactionAction $updateTransactionAction): JsonResponse
+    {
+        $transactionData = $transactionRequest->validated();
+
+        $responce = $updateTransactionAction->handle($transactionData, $transaction, $this->coinGeckoService);
+
+        return $responce;
+    }
+
+
+    public function delete(Transaction $transaction) : JsonResponse
+    {
+        $transaction->deleteOrFail();
+
+        return response()->json([
+            'message' => 'success'
+        ], 200);
     }
 }
