# src/app/Http/Resources/Portfolio/TransactionResource.php
@@ -1,22 +1,15 @@
 <?php
 
-namespace App\Http\Requests\Portfolio;
+namespace App\Http\Resources\Portfolio;
 
-use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
 
-class TransactionRequest extends FormRequest
+class TransactionResource extends JsonResource
 {
     /**
-     * Determine if the user is authorized to make this request.
-     */
-    public function authorize(): bool
-    {
-        return true;
-    }
-
-    /**
      * @OA\Schema(
-     *     schema="TransactionRequest",
+     *     schema="Transaction",
      *     type="object",
      *     @OA\Property(property="coin_name", type="string", description="Name of the cryptocurrency involved in the transaction"),
      *     @OA\Property(property="description", type="string", description="A description of the transaction"),
@@ -28,15 +21,17 @@ class TransactionRequest extends FormRequest
      *     @OA\Property(property="transaction_date", type="string", format="date-time", description="Date and time when the transaction occurred")
      * )
      */
-    public function rules(): array
+    public function toArray(Request $request): array
     {
         return [
-            'coin_name' => 'required|string|max:30',
-            'description' => 'string|max:255',
-            'amount' => 'required|numeric|min:0.000000000001',
-            'is_buying' => 'required|boolean',
-            'portfolio_id' => 'required|integer',
-            'transaction_date' => 'nullable|date', //format dd-mm-yy
+            'coin_name' => $this->coin_name,
+            'description' => $this->description,
+            'amount' => $this->amount,
+            'price_at_buy_moment' => $this->price_at_buy_moment,
+            'total_value_in_usd' => $this->total_value_in_usd,
+            'is_buying' => $this->is_buying,
+            'portfolio_id' => $this->portfolio_id,
+            'transaction_date' => $this->transaction_date,
         ];
     }
 }
